Linked Instanced collection data loss #63004

Closed
opened 2019-03-27 11:20:35 +01:00 by Marek Hollý · 7 comments

System Information
Operating system: Windows-10-10.0.17134 64 Bits
Graphics card: GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 419.35

Blender Version
Broken: version: 2.80 (sub 51), branch: blender2.7, commit date: 2019-03-25 00:55, hash: 07f6be87a9
Worked: (optional)

Short description of error
Instances of Linked Collection lost after scene save.

Exact steps for others to reproduce the error
1 - Create new scene. Create collection Coll01, add Suzanne mesh into collection. Save scene (01_Collection_source_scene.blend)
2 - Create new scene. Create several polygon source objects (cubes with different SRT in my case). Link Coll01 (from 01_Collection_source_scene.blend) into scene.
3 - Select all the source objects (cubes), and lastly select linked Coll01 collection. Press Object/Make Links/Instance collections.
4 - Select all the source objects (cubes) (without Coll01 collection). In object properties/Instancing uncheck "Display Instancer" with ALT key pressed. Now you see Coll01 Collection instanced in a place of all the source objects. Save scene (02_Collection_target_scene.blend)
5 - Open scene (02_Collection_target_scene.blend) again
6 - No instances anymore.Linked Instance data loss.zip

**System Information** Operating system: Windows-10-10.0.17134 64 Bits Graphics card: GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 419.35 **Blender Version** Broken: version: 2.80 (sub 51), branch: blender2.7, commit date: 2019-03-25 00:55, hash: `07f6be87a9` Worked: (optional) **Short description of error** Instances of Linked Collection lost after scene save. **Exact steps for others to reproduce the error** 1 - Create new scene. Create collection Coll01, add Suzanne mesh into collection. Save scene (01_Collection_source_scene.blend) 2 - Create new scene. Create several polygon source objects (cubes with different SRT in my case). Link Coll01 (from 01_Collection_source_scene.blend) into scene. 3 - Select all the source objects (cubes), and lastly select linked Coll01 collection. Press Object/Make Links/Instance collections. 4 - Select all the source objects (cubes) (without Coll01 collection). In object properties/Instancing uncheck "Display Instancer" with ALT key pressed. Now you see Coll01 Collection instanced in a place of all the source objects. Save scene (02_Collection_target_scene.blend) 5 - Open scene (02_Collection_target_scene.blend) again 6 - No instances anymore.[Linked Instance data loss.zip](https://archive.blender.org/developer/F6890167/Linked_Instance_data_loss.zip)
Author

Added subscriber: @MarekHolly

Added subscriber: @MarekHolly
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Confirmed, checking

Confirmed, checking
Philipp Oeser self-assigned this 2019-03-27 14:42:37 +01:00
Member

Instancing a collection is only allowed for Empties in 2.8, (this changed in 2eca054e14)
So I guess the Make Links operator should also be updated to prevent setting dupli-collections on non-empty objects. (or the versioning code from 7fe3d1e7d7 would always have to run)
But preventing that this actually happens would be more consistent I guess, looking into it now...

Instancing a collection is only allowed for Empties in 2.8, (this changed in 2eca054e14) So I guess the Make Links operator should also be updated to prevent setting dupli-collections on non-empty objects. (or the versioning code from 7fe3d1e7d7 would always have to run) But preventing that this actually happens would be more consistent I guess, looking into it now...

This issue was referenced by 9624df5d1e

This issue was referenced by 9624df5d1edd74b1be77cf000dbd39f9e19f89c3
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Author

Thanks Phillip. It works on empties.

Thanks Phillip. It works on empties.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#63004
No description provided.